/***********************************************************
 * Copyright (c) Microsoft Corporation. All rights reserved.
 * Licensed under the MIT License
 **********************************************************/
let useStateMock: jest.Mock | null = null;
jest.mock('react', () => {
    const actual = jest.requireActual('react');
    return {
        ...actual,
        useState: (...args: any[]) => {
            if (useStateMock) {
                const result = useStateMock(...args);
                if (result !== undefined) {
                    return result;
                }
            }
            return actual.useState(...args);
        },
    };
});

import * as React from 'react';
import 'jest';
import { ModuleIdentityDetail } from './moduleIdentityDetail';
import { SynchronizationStatus } from '../../../../api/models/synchronizationStatus';
import * as AsyncSagaReducer from '../../../../shared/hooks/useAsyncSagaReducer';
import * as IotHubContext from '../../../../iotHub/hooks/useIotHubContext';

import { render } from '@testing-library/react';
import { MemoryRouter } from 'react-router-dom';
const pathname = 'https://127.0.0.1:3000/#/resources/testhub.azure-devices.net/devices/deviceDetail/moduleIdentity/moduleDetail/?deviceId=newdevice&moduleId=moduleId';
jest.mock('react-router-dom', () => ({
    ...jest.requireActual('react-router-dom'),
    useNavigate: () => jest.fn(),
    useLocation: () => ({ search: '?deviceId=newdevice&moduleId=moduleId', pathname }),
}));

const deviceId = 'deviceId';
const moduleId = 'moduleId';
const moduleIdentityWithoutAuth = {
    authentication: null,
    deviceId,
    moduleId
};
const moduleIdentityWithSasAuth = {
    authentication: {
        symmetricKey: {
            primaryKey: 'mock_key_1',
            secondaryKey: 'mock_key_2'
        },
        type: 'sas',
        x509Thumbprint: null
    },
    deviceId,
    moduleId
};

const selfSignedModuleIdentity = {
    authentication: {
        symmetricKey: null,
        type: 'selfSigned',
        x509Thumbprint: {
            primaryThumbprint: 'thumbprint1',
            secondaryThumbprint: 'thumbprint2'
        }
    },
    deviceId,
    moduleId
};

const certificateAuthorityModuleIdentity = {
    authentication: {
        symmetricKey: null,
        type: 'certificateAuthority',
        x509Thumbprint: null
    },
    deviceId,
    moduleId
};

describe('ModuleIdentityDetail', () => {
    jest.spyOn(IotHubContext, 'useIotHubContext').mockReturnValue({ hostName: 'hostName'});

    context('snapshot', () => {
        it('matches snapshot while loading', () => {
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([{synchronizationStatus: SynchronizationStatus.working}, jest.fn()]);
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });

        it('matches snapshot after module identity is fetched', () => {
            const initialState = {
                payload: moduleIdentityWithoutAuth,
                synchronizationStatus: SynchronizationStatus.fetched
            };
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([initialState, jest.fn()]);
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });

        it('matches snapshot after sas module identity is fetched', () => {
            const initialState = {
                payload: moduleIdentityWithSasAuth,
                synchronizationStatus: SynchronizationStatus.fetched
            };
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([initialState, jest.fn()]);
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });

        it('matches snapshot after self signed module identity is fetched', () => {
            const initialState = {
                payload: selfSignedModuleIdentity,
                synchronizationStatus: SynchronizationStatus.fetched
            };
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([initialState, jest.fn()]);
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });

        it('matches snapshot after certificateAuthority module identity is fetched', () => {
            const initialState = {
                payload: certificateAuthorityModuleIdentity,
                synchronizationStatus: SynchronizationStatus.fetched
            };
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([initialState, jest.fn()]);
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });

        afterEach(() => {
            useStateMock = null;
        });

        it('matches snapshot showing delete confirmation', () => {
            const initialState = {
                payload: certificateAuthorityModuleIdentity,
                synchronizationStatus: SynchronizationStatus.fetched
            };
            jest.spyOn(AsyncSagaReducer, 'useAsyncSagaReducer').mockReturnValueOnce([initialState, jest.fn()]);
            const actual = jest.requireActual('react');
            let called = false;
            useStateMock = jest.fn((...args: any[]) => {
                if (!called) {
                    called = true;
                    return actual.useState(true);
                }
                return undefined;
            });
            expect(render(<MemoryRouter><ModuleIdentityDetail /></MemoryRouter>)).toBeDefined();
        });
    });
});