// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleIdentityDetail snapshot matches snapshot after certificateAuthority module identity is fetched 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
    <Label>
      moduleIdentity.authenticationType.ca.text
    </Label>
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;

exports[`ModuleIdentityDetail snapshot matches snapshot after module identity is fetched 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;

exports[`ModuleIdentityDetail snapshot matches snapshot after sas module identity is fetched 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.symmetricKey.primaryKey"
      label="moduleIdentity.authenticationType.symmetricKey.primaryKey"
      labelCallout="moduleIdentity.authenticationType.symmetricKey.primaryKeyTooltip"
      value="mock_key_1"
    />
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.symmetricKey.secondaryKey"
      label="moduleIdentity.authenticationType.symmetricKey.secondaryKey"
      labelCallout="moduleIdentity.authenticationType.symmetricKey.secondaryKeyTooltip"
      value="mock_key_2"
    />
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.symmetricKey.primaryConnectionString"
      label="moduleIdentity.authenticationType.symmetricKey.primaryConnectionString"
      value="HostName=hostName;DeviceId=newdevice;ModuleId=moduleId;SharedAccessKey=mock_key_1"
    />
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.symmetricKey.secondaryConnectionString"
      label="moduleIdentity.authenticationType.symmetricKey.secondaryConnectionString"
      value="HostName=hostName;DeviceId=newdevice;ModuleId=moduleId;SharedAccessKey=mock_key_2"
    />
    <SasTokenGenerationView
      activeAzureResourceHostName="hostName"
      moduleIdentity={
        {
          "authentication": {
            "symmetricKey": {
              "primaryKey": "mock_key_1",
              "secondaryKey": "mock_key_2",
            },
            "type": "sas",
            "x509Thumbprint": null,
          },
          "deviceId": "deviceId",
          "moduleId": "moduleId",
        }
      }
    />
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;

exports[`ModuleIdentityDetail snapshot matches snapshot after self signed module identity is fetched 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
    <Label>
      moduleIdentity.authenticationType.selfSigned.text
    </Label>
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.selfSigned.primaryThumbprint"
      label="moduleIdentity.authenticationType.selfSigned.primaryThumbprint"
      labelCallout="moduleIdentity.authenticationType.selfSigned.primaryThumbprintTooltip"
      value="thumbprint1"
    />
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="moduleIdentity.authenticationType.selfSigned.secondaryThumbprint"
      label="moduleIdentity.authenticationType.selfSigned.secondaryThumbprint"
      labelCallout="moduleIdentity.authenticationType.selfSigned.secondaryThumbprintTooltip"
      value="thumbprint2"
    />
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;

exports[`ModuleIdentityDetail snapshot matches snapshot showing delete confirmation 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
    <Label>
      moduleIdentity.authenticationType.ca.text
    </Label>
    <Dialog
      modalType="alert"
      onOpenChange={[Function]}
      open={true}
    >
      <DialogSurface>
        <DialogBody>
          <DialogTitle>
            moduleIdentity.detail.deleteConfirmation
          </DialogTitle>
          <DialogActions>
            <Button
              appearance="primary"
              onClick={[Function]}
            >
              deviceLists.commands.delete.confirmationDialog.confirm
            </Button>
            <Button
              onClick={[Function]}
            >
              deviceLists.commands.delete.confirmationDialog.cancel
            </Button>
          </DialogActions>
        </DialogBody>
      </DialogSurface>
    </Dialog>
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;

exports[`ModuleIdentityDetail snapshot matches snapshot while loading 1`] = `
<Fragment>
  <CommandBarV9
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "icon": <ArrowSyncRegular />,
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "icon": <DeleteRegular />,
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
      ]
    }
  />
  <div
    className="device-detail"
  >
    <MaskedCopyableTextField
      allowMask={false}
      ariaLabel="moduleIdentity.moduleId"
      label="moduleIdentity.moduleId"
      labelCallout="moduleIdentity.moduleIdTooltip"
      value="moduleId"
    />
    <MultiLineShimmer />
  </div>
  <LiveRegion
    message=""
  />
</Fragment>
`;
